 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
     
    android:paddingTop="0dp">

     <!--ImageView
        android:id="@+id/back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/back" 
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
     	android:onClick="goBack"/-->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="fitXY"
        android:onClick="playZoo"
        android:src="@drawable/zoo" />
    
   
    
    <Button android:id="@+id/a"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="25dp"
        android:layout_centerVertical="true"
        style="@style/MyCoolButton"
        android:layout_marginTop="05dp"
        android:text="@string/A" 
        android:textSize="25sp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/b"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/a"
        android:textSize="25sp"
        style="@style/MyCoolButton"
        android:layout_centerVertical="true"
        android:text="@string/B" 
        android:layout_marginTop="05dp"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage"        />
        
        <Button android:id="@+id/c"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/b"
        android:textSize="25sp"
               style="@style/MyCoolButton"
               android:layout_marginTop="05dp"
        android:layout_marginLeft="05dp"
        android:layout_centerVertical="true"
        android:text="@string/C" 
        android:onClick="sendMessage"        />
        
        <Button android:id="@+id/d"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/c"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_marginTop="05dp"
        android:text="@string/D" 
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage"        />
        
        <Button android:id="@+id/e"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/d"
		style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:layout_marginTop="05dp"
        android:layout_centerVertical="true"
        android:text="@string/E" 
        android:onClick="sendMessage"        />
        
        <Button android:id="@+id/f"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_below="@+id/a" 
        android:layout_marginLeft="25dp"
        style="@style/MyCoolButton"
        android:layout_marginTop="05dp"
        android:text="@string/F" 
        android:onClick="sendMessage"        />
      
        <Button android:id="@+id/g"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/f"
        android:textSize="25sp"
        android:layout_alignTop="@+id/f"
        android:text="@string/G"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage" />
      
        
        <Button android:id="@+id/h"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/g"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:layout_alignTop="@+id/g"
        android:text="@string/H" 
        android:onClick="sendMessage" />
        
        
        <Button android:id="@+id/i"
                android:layout_width="55dp"
                android:textSize="25sp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/h"
        android:layout_alignTop="@+id/h"
        android:text="@string/I" 
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/j"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/i"
        android:layout_alignTop="@+id/i"
        android:text="@string/J" 
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/k"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_below="@+id/f"
        android:layout_marginLeft="25dp"
        android:text="@string/K" 
        style="@style/MyCoolButton"
        android:layout_marginTop="05dp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/l"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/k"
        android:layout_alignTop="@+id/k"
        android:text="@string/L" 
        style="@style/MyCoolButton"
        android:textSize="25sp"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/m"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/l"
        android:layout_alignTop="@+id/l"
        android:text="@string/M" 
        style="@style/MyCoolButton"
        android:textSize="25sp"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/n"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/m"
        android:textSize="25sp"
        android:layout_alignTop="@+id/m"
        android:text="@string/N" 
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/o"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/n"
        android:layout_alignTop="@+id/n"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        
        android:text="@string/O" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/p"
                android:layout_width="55dp"
                android:textSize="25sp"
        android:layout_height="55dp"
        android:layout_below="@+id/m"
        style="@style/MyCoolButton"
        android:layout_marginTop="05dp"
        android:layout_marginLeft="25dp"
        android:text="@string/P" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/q"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/p"
        android:layout_alignTop="@+id/p"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:text="@string/Q" 
        android:textSize="25sp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/r"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/q"
        style="@style/MyCoolButton"
        android:textSize="25sp"
        android:layout_marginLeft="05dp"
        android:layout_alignTop="@+id/q"
        android:text="@string/R" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/s"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_toRightOf="@+id/r"
        android:layout_alignTop="@+id/r"
        android:text="@string/S" 
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:textSize="25sp"
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/t"
                android:layout_width="55dp"
        android:layout_height="55dp"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        android:layout_toRightOf="@+id/s"
        android:layout_alignTop="@+id/s"
        android:textSize="25sp"
        
        android:text="@string/T" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/u"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:textSize="25sp"
        android:layout_below="@+id/p"
        style="@style/MyCoolButton"
        android:layout_marginTop="05dp"
        android:layout_marginLeft="25dp"
        android:text="@string/U" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/v"
                android:layout_width="55dp"
        android:layout_height="55dp"
        style="@style/MyCoolButton"
        android:textSize="25sp"
        android:layout_marginLeft="05dp"
        
        android:layout_toRightOf="@+id/u"
        android:layout_alignTop="@+id/u"
        android:text="@string/V" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/w"
                android:layout_width="55dp"
                android:textSize="25sp"
        android:layout_height="55dp"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        
        android:layout_toRightOf="@+id/v"
        android:layout_alignTop="@+id/v"
        android:text="@string/W" 

        android:onClick="sendMessage" />
        
        <Button android:id="@+id/x"
                android:layout_width="55dp"
        android:layout_height="55dp"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        
        android:layout_toRightOf="@+id/w"
        android:layout_alignTop="@+id/w"
        android:text="@string/X"
        android:textSize="25sp" 
        android:onClick="sendMessage" />
        
        <Button android:id="@+id/y"
                android:layout_width="55dp"
        android:layout_height="55dp"
        style="@style/MyCoolButton"
        android:layout_marginLeft="05dp"
        
        android:layout_toRightOf="@+id/x"
        android:layout_alignTop="@+id/x"
        android:text="@string/Y"
        android:textSize="25sp" 
        android:onClick="sendMessage" />
        
                
        <Button android:id="@+id/z"
                android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_below="@+id/w"
        style="@style/MyCoolButton"
        android:layout_marginTop="05dp"
        android:textSize="25sp"
        android:layout_alignLeft="@+id/w"
                   
        android:text="@string/Z" 
        android:onClick="sendMessage" />

 <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            
            android:orientation="vertical" 
            android:background="@color/white">
            
            <Button android:id="@+id/Next"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        android:layout_alignParentRight="true"
		        style="@style/MyCoolButton"
		        android:background="@drawable/front_arrow"
		        android:onClick="processNext"  
		        />
            <Button android:id="@+id/Back"
		        android:layout_width="100dp"
		        android:layout_height="40dp"
		        
		        style="@style/MyCoolButton"
		        android:background="@drawable/back_arrow"
		        android:onClick="processBack"  
		        />
        </RelativeLayout>
        
        
</RelativeLayout>